
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hailolibero"
version = "0.1.0"
dependencies = [
  "furl>2.0.0",
  "beautifulsoup4>4.12.0"
]
authors = [
  { name="Nick Dawson", email="nick@dawson.au" },
]
description = "Python library to interface with the Hailo Libero 3.0"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Neonkoala/hailolibero"
"Bug Tracker" = "https://github.com/Neonkoala/hailolibero/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"

